[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/debug/state_test_us4.gd" id="1_menu_test"]
[ext_resource type="PackedScene" path="res://templates/base_scene_template.tscn" id="2_base"]

[node name="MenuTest" instance=ExtResource("2_base")]
script = ExtResource("1_menu_test")

[node name="UI" type="Control" parent="." index="1"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MenuButtons" type="VBoxContainer" parent="UI" index="0"]
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 300.0

[node name="BtnMainMenu" type="Button" parent="UI/MenuButtons" index="0"]
layout_mode = 2
text = "Navigate to Main Menu"

[node name="BtnSettings" type="Button" parent="UI/MenuButtons" index="1"]
layout_mode = 2
text = "Navigate to Settings"

[node name="BtnCharacterSelect" type="Button" parent="UI/MenuButtons" index="2"]
layout_mode = 2
text = "Navigate to Character Select"

[node name="BtnSelectWarrior" type="Button" parent="UI/MenuButtons" index="3"]
layout_mode = 2
text = "Select Character: Warrior"

[node name="BtnSelectMage" type="Button" parent="UI/MenuButtons" index="4"]
layout_mode = 2
text = "Select Character: Mage"

[node name="BtnSelectEasy" type="Button" parent="UI/MenuButtons" index="5"]
layout_mode = 2
text = "Select Difficulty: Easy"

[node name="BtnSelectHard" type="Button" parent="UI/MenuButtons" index="6"]
layout_mode = 2
text = "Select Difficulty: Hard"

[node name="StateDisplay" type="Label" parent="UI" index="1"]
offset_left = 320.0
offset_top = 20.0
offset_right = 600.0
offset_bottom = 300.0
text = "Menu State:"
autowrap_mode = 3
